added about, opisanie

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.min.css">
-    <title>Document</title>
+    <title>Главная страница</title>
   </head>
   <body> 
     <header> 
@@ -24,6 +24,93 @@
     </header>
   </body>
 </html>
-<div class="container"> 
-  <div class="main"> </div>
-</div>
+<section class="promo-front">
+  <div class="bg-layer"></div>
+  <div class="container">
+    <div class="promo-slider js--promo-slider">
+      <div class="slides">
+        <div class="slide">
+          <div class="inner" style="background-image: url(../img/promo_01.jpg)"></div>
+        </div>
+        <div class="slide">
+          <div class="inner" style="background-image: url(../img/promo_01.jpg)"></div>
+        </div>
+        <div class="slide">
+          <div class="inner" style="background-image: url(../img/promo_01.jpg)"></div>
+        </div>
+      </div>
+      <div class="controls"> 
+        <div class="dots"></div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="about"> 
+  <div class="container"> 
+    <div class="columns"> 
+      <div class="column"> 
+        <div class="description description--about">
+          <div class="icon"></div>
+          <div class="text"> 
+            <div class="block-title">Конкурсе <span class="accent">PRO</span>fashion Masters </div>
+            <div class="content-block">
+              <p>Всероссийский конкурс промышленного дизайна одежды PROfashion Masters – это площадка для начинающих и действующих дизайнеров.</p>
+              <p>Тема конкурса – верхняя одежда (пальто).</p>
+              <p>Проводится с 2014 года</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="column"> 
+        <div class="btn btn--red"> 
+          <div class="text">Регистрация дизайнера</div>
+        </div>
+        <div class="description description--registration">
+          <div class="content-block">
+            <p>Открыт приём заявок на участие в  2024 году с 1 сентября</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="opisanie"> 
+  <div class="container"> 
+    <div class="section-title">Описание конкурса</div>
+  </div>
+  <div class="opisanie-texts"> 
+    <div class="red-header">
+      <div class="container">
+        <div class="columns"> 
+          <div class="column">
+            <div class="icon"></div>
+            <div class="text">Единственный</div>
+          </div>
+          <div class="column"> 
+            <div class="icon"></div>
+            <div class="text">Жюри</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="text-blocks">
+      <div class="container">
+        <div class="columns"> 
+          <div class="column">
+            <div class="content-block"> 
+              <p>PROfashion Masters – единственный конкурс, ориентированный на создание промышленных коллекций и направленный на формирование профессиональных кадров для российских производителей одежды.</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content-block"> 
+              <p>В жюри конкурса входят руководители и главные дизайнеры крупных предприятий, преподаватели профильных вузов, аналитики, консультанты, журналисты, байеры.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<footer></footer>
+<script src="/js/libs.min.js"></script>
+<script src="/js/main.js"></script>
