--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,29 @@
     </div>
   </div>
 </section>
+<section class="who-can">
+  <div class="container"> 
+    <div class="section-title">Кто может участвовать?</div>
+    <div class="persons-list"> 
+      <div class="columns"> 
+        <div class="column column--image"> 
+          <div class="photo" style="background-image: url(/img/who-can-photo.jpg)"> </div>
+        </div>
+        <div class="column">
+          <div class="content-block">
+            <ul>
+              <li> <span>Студенты и выпускники профильных высших учебных заведений не моложе 18 лет</span></li>
+              <li> <span>Молодые специалисты</span></li>
+              <li> <span>Молодые дизайнеры</span></li>
+              <li> <span>Дизайн-студии</span></li>
+              <li> <span>Творческие коллективы</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <footer></footer>
 <script src="/js/libs.min.js"></script>
 <script src="/js/main.js"></script>
