added rules section

--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,57 @@
     </div>
   </div>
 </section>
+<section class="rules"> 
+  <div class="container"> 
+    <div class="section-title">Как проводится?</div>
+    <div class="steps">
+      <div class="step"> 
+        <div class="columns"> 
+          <div class="column column--step-name">
+            <div class="step-name">I этап</div>
+          </div>
+          <div class="column column--step-description">
+            <div class="description">
+              <div class="block-title">Конкурс эскизов </div>
+              <div class="content-block"> 
+                <p>С 1 сентября по 1 ноября 2022 года предоставляются эскизы мини-коллекции (5 моделей) верхней одежды (пальто, куртки, парки, жакеты, пиджаки и другое) в электронном виде (файл в формате JPEG).</p>
+                <p>Подведение итогов 1 декабря 2023 года.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="columns"> 
+          <div class="column column--step-description">
+            <div class="description">
+              <div class="block-title">Конкурс готовых коллекций</div>
+              <div class="content-block"> 
+                <p>До 10 февраля 2024 года участники должны предоставить готовую коллекцию верхней одежды (5 образов) из тканей, предложенных генеральным спонсором конкурса, компанией «Ткани Престиж». Как минимум в одном изделии должен быть использован инновационный утеплитель «Слайтекс» от компании «С2 ГРУПП». Упомянутые материалы предоставляются финалистам бесплатно.</p>
+              </div>
+            </div>
+          </div>
+          <div class="column column--step-name">
+            <div class="step-name">II этап-Финал</div>
+          </div>
+        </div>
+        <div class="columns"> 
+          <div class="column column--step-name">
+            <div class="step-name">Финал</div>
+          </div>
+          <div class="column column--step-description">
+            <div class="description">
+              <div class="block-title">Финал конкурса</div>
+              <div class="content-block"> 
+                <p>Проходит в феврале 2024 года в Москве, на выставке CPM – Collection Premiere Moscow.</p>
+                <p>Каковы критерии оценки?</p>
+                <p>Коллекция должна быть выполнена в коммерческом ключе, соответствовать актуальным трендам, иметь новизну и быть креативной.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <footer></footer>
 <script src="/js/libs.min.js"></script>
 <script src="/js/main.js"></script>
