added profit for finalist, for winners and participation

--- a/src/index.html
+++ b/src/index.html
@@ -185,6 +185,74 @@
     </div>
   </div>
 </section>
+<section class="profit-for-finalists">
+  <div class="red-header">
+    <div class="container">
+      <h2 class="section-title">Что получают победители первого этапа?</h2>
+    </div>
+  </div>
+  <div class="columns">
+    <div class="column column--photo" style="background-image:url(../img/profit-to-finalist.jpg)">
+      <div class="content-block">
+        <p>Всем финалистам компания «Ткани Престиж» бесплатно предоставляет пальтовые ткани для создания конкурсных работ</p>
+      </div>
+    </div>
+    <div class="column column--text">
+      <div class="block-title">Программа профессиональной поддержки участников второго этапа</div>
+      <div class="gifts">
+        <div class="gift">
+          <div class="gift-title">Программа менторства.</div>
+          <div class="content-block">
+            <p>Каждому участнику конкурса, прошедшему во второй этап, предоставляется ментор – специалист в дизайне и конструировании с большим опытом работы в том числе и на промышленном производстве. Программа предполагает возможность ежедневно контактировать с ментором, задавать ему вопросы, связанные с дизайном и конструированием, получать советы и наставления в процессе создания конкурсной «капсулы».</p>
+          </div>
+        </div>
+        <div class="gift">
+          <div class="gift-title">Мастер-классы </div>
+          <div class="content-block">
+            <p>(вебинары) экспертов индустрии.</p>
+            <p>Для участников второго этапа будут организованы мастер-классы (для тех, кто находится не в Москве – вебинары) членов жюри конкурса, ведущих специалистов индустрии моды, дизайнеров, журналистов.</p>
+          </div>
+        </div>
+        <div class="gift">
+          <div class="gift-title">Экскурсии на фабрики.</div>
+          <div class="content-block">
+            <p>Для участников второго этапа будут организованы экскурсии на фабрики, отшивающие верхнюю одежду.</p>
+          </div>
+        </div>
+        <div class="gift">
+          <div class="gift-title">Возможность стажировки.</div>
+          <div class="content-block">
+            <p>Партнеры конкурса предоставят финалистам конкурса возможность прохождения краткосрочных стажировок на производстве.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="profit-for-winners" style="background-image:url(../img/profit-to-winners.jpg)">
+  <div class="container">
+    <div class="columns"> 
+      <div class="column"> 
+        <h2 class="section-title">Что получают победители?</h2>
+      </div>
+      <div class="column">
+        <div class="content-block"> 
+          <p>Две главные награды размером в 100 тысяч рублей каждая для двух финалистов PROfashion Masters.</p>
+          <p>Возможность стажировки в ведущих компаниях-производителях верхней одежды.</p>
+          <p>Дополнительные призы от партнёров и жюри конкурса.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="participation">
+  <div class="container"> 
+    <h2 class="section-title">Заявка на участие</h2>
+    <div class="btn btn--red">
+      <div class="text">Заполнить<img class="icon-participation" src="/img/icon-arrow-registration.svg"></div>
+    </div>
+  </div>
+</section>
 <footer></footer>
 <script src="/js/libs.min.js"></script>
 <script src="/js/main.js"></script>
