added partners-front block

--- a/src/index.html
+++ b/src/index.html
@@ -289,6 +289,25 @@
     <div class="controls"><a class="show-all" href="#">Смотреть всех</a></div>
   </div>
 </section>
+<section class="partners-front">
+  <div class="container"> 
+    <div class="section-title">Партнеры</div>
+    <div class="partners"> 
+      <div class="partner" style="background-image: url(/img/partner-01.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-02.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-03.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-04.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-05.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-06.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-07.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-08.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-09.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-10.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-11.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-12.png)"></div>
+    </div>
+  </div>
+</section>
 <footer></footer>
 <script src="/js/libs.min.js"></script>
 <script src="/js/main.js"></script>
