--- a/src/index.html
+++ b/src/index.html
@@ -349,6 +349,34 @@
     </div>
   </div>
 </section>
+<section class="news-front"> 
+  <div class="container"> 
+    <div class="section-title">Новости</div>
+    <div class="news"> 
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-1.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">Выбраны победители конкурса дизайнеров PROFashion Masters</div>
+          <div class="content-block">
+            <p>Вечером 22 февраля на подиуме выставки Collection Premiere Moscow состоялся гала-показ IXВсероссийского конкурса дизайнеров одежды</p>
+          </div>
+          <div class="publication-date">Дата публикации: 23.02.2023</div>
+        </div>
+      </div>
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-2.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">Финальный показ конкурса PROFashion Masters пройдет 22 февраля</div>
+          <div class="content-block">
+            <p>22 февраля на подиуме крупнейшей профильной выставки Collection Première Moscow состоитсягала-показ конкурсных коллекций IX Всероссийского конкурса дизайнеров одежды PROfashionMasters. Конкурс проводится девятый год подряд</p>
+          </div>
+          <div class="publication-date">Дата публикации: 15.02.2023</div>
+        </div>
+      </div>
+    </div>
+    <div class="controls"> <a class="show-all" href="#">Показать все </a></div>
+  </div>
+</section>
 <footer></footer>
 <script src="/js/libs.min.js"></script>
 <script src="/js/main.js"></script>
