added subscribe form, footer

--- a/src/index.html
+++ b/src/index.html
@@ -377,6 +377,42 @@
     <div class="controls"> <a class="show-all" href="#">Показать все </a></div>
   </div>
 </section>
-<footer></footer>
+<section class="subscribe-form">
+  <div class="container"> 
+    <h2 class="section-title">Подписаться на новости</h2>
+    <div class="content-block"> 
+      <p>Подпишитесь, чтобы ничего не пропустить!</p>
+    </div>
+    <form class="subscribe" action="">
+      <div class="form-fields"> 
+        <div class="form-field">
+          <input class="input-text" type="text" placeholder="Электронная почта">
+        </div>
+        <div class="form-field">
+          <input class="btn btn--red" type="submit" value="Подписаться">
+        </div>
+      </div>
+    </form>
+  </div>
+</section>
+<footer>
+  <div class="container"> 
+    <div class="top-row"> 
+      <div class="socials"> 
+        <div class="messengers"> <a class="messenger messenger--inst" href="#"></a><a class="messenger messenger--tlgm" href="#"></a><a class="messenger messenger--wapp" href="#"></a><a class="messenger messenger--vknt" href="#"></a></div>
+        <div class="email"><a class="email-address" href="mailto:event@profashion.ru">event@profashion.ru</a></div>
+      </div>
+      <div class="logo"><img class="logo-img" src="/img/icon-footer-logo.svg"></div>
+    </div>
+    <div class="bottom-row">
+      <div class="content-block"> 
+        <p class="address">123007 Москва, Ленинградский пр-т, 35, стр. 2, офис 117</p>
+      </div>
+      <div class="content-block"> 
+        <p class="copyrights">© 2013-2023 PROfashion</p>
+      </div>
+    </div>
+  </div>
+</footer>
 <script src="/js/libs.min.js"></script>
 <script src="/js/main.js"></script>
