rename zhuri to juri in files

--- a/src/index.html
+++ b/src/index.html
@@ -253,33 +253,33 @@
     </div>
   </div>
 </section>
-<section class="front-zhuri-block">
+<section class="front-jury-block">
   <div class="container"> 
     <h2 class="section-title">Жюри</h2>
-    <div class="zhuri">
+    <div class="jury">
       <div class="member">
-        <div class="photo" style="background-image:url(/img/zhuri-01.jpg)"></div>
+        <div class="photo" style="background-image:url(/img/jury-01.jpg)"></div>
         <div class="info"> 
           <div class="name">Дмитрий Каманин</div>
           <div class="preview-text">Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»</div>
         </div>
       </div>
       <div class="member active">
-        <div class="photo" style="background-image:url(/img/zhuri-02.jpg)"></div>
+        <div class="photo" style="background-image:url(/img/jury-02.jpg)"></div>
         <div class="info">
           <div class="name">Дмитрий Каманин</div>
           <div class="preview-text">Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»</div>
         </div>
       </div>
       <div class="member">
-        <div class="photo" style="background-image:url(/img/zhuri-03.jpg)"></div>
+        <div class="photo" style="background-image:url(/img/jury-03.jpg)"></div>
         <div class="info">
           <div class="name">Дмитрий Каманин</div>
           <div class="preview-text">Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»</div>
         </div>
       </div>
       <div class="member">
-        <div class="photo" style="background-image:url(/img/zhuri-04.jpg)"></div>
+        <div class="photo" style="background-image:url(/img/jury-04.jpg)"></div>
         <div class="info">
           <div class="name">Дмитрий Каманин</div>
           <div class="preview-text">Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»</div>
@@ -401,8 +401,7 @@
       <div class="socials"> 
         <div class="messengers"> <a class="messenger messenger--inst" href="#"></a><a class="messenger messenger--tlgm" href="#"></a><a class="messenger messenger--wapp" href="#"></a><a class="messenger messenger--vknt" href="#"></a></div>
         <div class="email"><a class="email-address" href="mailto:event@profashion.ru">event@profashion.ru</a></div>
-      </div>
-      <div class="logo"><img class="logo-img" src="/img/icon-footer-logo.svg"></div>
+      </div><a class="logo" href="/"><img class="logo-img" src="/img/icon-footer-logo.svg"></a>
     </div>
     <div class="bottom-row">
       <div class="content-block"> 
