added news-list, news-single

--- a/src/news.html
+++ b/src/news.html
@@ -18,12 +18,107 @@
             <h1 class="main-row">Новости</h1>
             <div class="sub-row"> </div>
           </div>
-          <div class="add-menu"> <a class="add-menu__link" href="#">Новости</a><a class="add-menu__link" href="#">Личный кабинет</a></div>
+          <div class="add-menu"> <a class="add-menu__link active" href="#">Новости</a><a class="add-menu__link" href="#">Личный кабинет</a></div>
         </div>
       </div>
     </header>
   </body>
 </html>
+<section class="news-top">
+  <div class="columns"> 
+    <div class="column column--third"><a class="news-item" href="#" style="background-image: url(/img/top-news-01.jpg)"></a></div>
+    <div class="column column--third"><a class="news-item" href="#" style="background-image: url(/img/top-news-02.jpg)"></a></div>
+    <div class="column column--third"><a class="news-item" href="#" style="background-image: url(/img/top-news-03.jpg)"></a></div>
+  </div>
+</section>
+<section class="news-list"> 
+  <div class="container"> 
+    <div class="news"> 
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-1.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">Выбраны победители конкурса дизайнеров PROFashion Masters</div>
+          <div class="content-block">
+            <p>Вечером 22 февраля на подиуме выставки Collection Premiere Moscow состоялся гала-показ IXВсероссийского конкурса дизайнеров одежды</p>
+          </div>
+          <div class="publication-date">Дата публикации: 23.02.2023</div>
+        </div>
+      </div>
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-2.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">Финальный показ конкурса PROFashion Masters пройдет 22 февраля</div>
+          <div class="content-block">
+            <p>22 февраля на подиуме крупнейшей профильной выставки Collection Première Moscow состоитсягала-показ конкурсных коллекций IX Всероссийского конкурса дизайнеров одежды PROfashionMasters. Конкурс проводится девятый год подряд</p>
+          </div>
+          <div class="publication-date">Дата публикации: 15.02.2023</div>
+        </div>
+      </div>
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-3.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">РАБОТА ДИЗАЙНЕРА ОДЕЖДЫ НА ПРОИЗВОДСТВЕ: ОЖИДАНИЯ И РЕАЛЬНОСТЬ</div>
+          <div class="content-block">
+            <p>27 января в 15:00 в рамках образовательной программы PROfashion Masters состоится прямой эфир на тему «Работа дизайнера одежды на…</p>
+          </div>
+          <div class="publication-date">Дата публикации: 26.01.2023</div>
+        </div>
+      </div>
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-4.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">КАК ПОДГОТОВИТЬ КОЛЛЕКЦИЮ К ФИНАЛУ? КОНФЕРЕНЦИЯ С ЧЛЕНАМИ ЖЮРИ PROFASHION MASTERS</div>
+          <div class="content-block">
+            <p>27 января в 15:00 в рамках образовательной программы PROfashion Masters состоится прямой эфир на тему «Работа дизайнера одежды на…</p>
+          </div>
+          <div class="publication-date">Дата публикации: 15.02.2023</div>
+        </div>
+      </div>
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-5.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">7 ДЕКАБРЯ СОСТОИТСЯ ОНЛАЙН-КОНФЕРЕНЦИЯ ПО ИТОГАМ ЭСКИЗНОГО ЭТАПА</div>
+          <div class="content-block">
+            <p>7 декабря, с 15:00 до 16:30 по московскому времени пройдет ZOOM-конференция с членамижюри и участниками конкурса PROfashion</p>
+          </div>
+          <div class="publication-date">Дата публикации: 05.12.2022</div>
+        </div>
+      </div>
+      <div class="news-item"> 
+        <div class="news-photo" style="background-image: url(/img/news-item-6.jpg)"></div>
+        <div class="news-item-info"> 
+          <div class="news-item-title">ОБЪЯВЛЕНЫ ФИНАЛИСТЫ КОНКУРСА PROFASHION MASTERS IX</div>
+          <div class="content-block">
+            <p>Организаторы IX Всероссийского конкурса дизайнеров одежды PROfashion Masters утвердили список финалистов. Учитывая повышенный интерес к проекту в этом году…</p>
+          </div>
+          <div class="publication-date">Дата публикации: 23.11.2022</div>
+        </div>
+      </div>
+    </div>
+    <div class="controls"> 
+      <div class="show-more">Показать еще </div>
+    </div>
+  </div>
+</section>
+<section class="partners-front">
+  <div class="container"> 
+    <div class="section-title">Партнеры</div>
+    <div class="partners"> 
+      <div class="partner" style="background-image: url(/img/partner-01.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-02.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-03.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-04.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-05.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-06.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-07.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-08.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-09.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-10.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-11.png)"></div>
+      <div class="partner" style="background-image: url(/img/partner-12.png)"></div>
+    </div>
+  </div>
+</section>
 <footer>
   <div class="container"> 
     <div class="top-row"> 
