--- a/src/projects.html
+++ b/src/projects.html
@@ -10,7 +10,7 @@
     <header> 
       <div class="container"> 
         <div class="top"><a class="logo logo--profashion" href="/"><img class="logo__img" src="/img/logo.svg"></a>
-          <div class="main-nav"> <a class="main-nav__link" href="#">Конкурсы</a><a class="main-nav__link" href="#">Регистрация</a><a class="main-nav__link" href="#">Жюри</a><a class="main-nav__link" href="#">Участники</a><a class="main-nav__link" href="#">Проекты</a><a class="main-nav__link" href="#">Партнеры</a></div>
+          <div class="main-nav"> <a class="main-nav__link" href="#">Конкурсы</a><a class="main-nav__link" href="#">Регистрация</a><a class="main-nav__link" href="#">Жюри</a><a class="main-nav__link" href="#">Участники</a><a class="main-nav__link active" href="#">Проекты</a><a class="main-nav__link" href="#">Партнеры</a></div>
           <div class="logo logo--oguz"> <img class="logo__img" src="/img/add_logo.svg"></div>
         </div>
         <div class="bottom">
