--- a/src/partners.html
+++ b/src/partners.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.min.css">
-    <title>Главная страница</title>
+    <title>Проекты участников</title>
   </head>
   <body> 
     <header> 
       <div class="container"> 
         <div class="top"><a class="logo logo--profashion" href="/"><img class="logo__img" src="/img/logo.svg"></a>
-          <div class="main-nav"> <a class="main-nav__link" href="#">Конкурсы</a><a class="main-nav__link" href="#">Регистрация</a><a class="main-nav__link" href="#">Жюри</a><a class="main-nav__link" href="#">Участники</a><a class="main-nav__link" href="#">Проекты</a><a class="main-nav__link" href="#">Партнеры</a></div>
+          <div class="main-nav"> <a class="main-nav__link" href="#">Конкурсы</a><a class="main-nav__link" href="#">Регистрация</a><a class="main-nav__link" href="#">Жюри</a><a class="main-nav__link" href="#">Участники</a><a class="main-nav__link" href="#">Проекты</a><a class="main-nav__link active" href="#">Партнеры</a></div>
           <div class="logo logo--oguz"> <img class="logo__img" src="/img/add_logo.svg"></div>
         </div>
         <div class="bottom">
           <div class="competition-name">
-            <div class="main-row"><span class="accent">X </span>Всероссийский конкурс</div>
+            <h1 class="main-row">Проекты участников</h1>
             <div class="sub-row">Промышленного дизайна одежды</div>
           </div>
           <div class="add-menu"> <a class="add-menu__link" href="#">Новости</a><a class="add-menu__link" href="#">Личный кабинет</a></div>
